seq/tests/03-expand-four-errors.stderr
error: error number 0
  |
4 |     compile_error!(concat!("error number ", stringify!(N)));
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: error number 1
  |
4 |     compile_error!(concat!("error number ", stringify!(N)));
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: error number 2
  |
4 |     compile_error!(concat!("error number ", stringify!(N)));
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: error number 3
  |
4 |     compile_error!(concat!("error number ", stringify!(N)));
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 4 previous errors
